# kfc

./: .gitignore  README.md  app.py  config.py  fillers.py  main.py  pyproject.toml  requirements.txt  sound_path.py  startup.py  test.py  test_sounddevice.py  tests.py  utils.py
assistant/: agent.py  dg_transcription.py  menu.py  tools.py  utils.py
kfc_voice_assistant/: __init__.py  agent.py  app.py  backend.py  config.py  frontend.py  main.py  sound_path.py  startup.py  tests.py  tools.py  utils.py
saved_chats/: chat-20240711_053402.json
tests/: test.py  test_utils.py
web_builder/: builder.py  styles.py  tailwind_confirmation_page_style.py  tailwind_menu_page_style.py  tailwind_review_page_style.py  templates.py
