[tool.poetry]
name = "kfc-voice-assistant"
version = "0.1.0"
description = ""
authors = ["ASWANTH C M <aswanthmanoj51@gmail.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
deepgram-sdk = "^3.3.1"
sseclient = "^0.0.27"
pyaudio = "^0.2.14"
streamlit = "^1.36.0"
llama-index-llms-groq = "^0.1.4"
llama-index = "^0.10.51"
pygame = "^2.6.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
