[tool.poetry]
name = "kfc_voice_assistant"
version = "0.1.0"
description = "The KFC Food Ordering Assistant is an low-latency interactive voice assistant designed to streamline the ordering process at KFC."
authors = ["ASWANTH C M <aswanthmanoj51@gmail.com>"]
readme = "README.md"

package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
deepgram-sdk = "^3.3.1"
sseclient = "^0.0.27"
pyaudio = "^0.2.14"
streamlit = "^1.36.0"
llama-index-llms-groq = "^0.1.4"
llama-index = "^0.10.51"
pygame = "^2.6.0"
pydub = "^0.25.1"
transformers = "^4.42.3"
numpy = "^1.17"
torch = "^2.3.1"
sounddevice = "^0.4.7"
scipy = "^1.14.0"
librosa = "^0.10.2.post1"
groq = "^0.9.0"
pydantic = "^2.8.0"
langchain-groq = "^0.1.6"
simpleaudio = "^1.0.4"
assemblyai = "^0.28.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
